--- a/email1.html
+++ b/email1.html
@@ -11,7 +11,7 @@
         <thead>
             <tr>
                 <th style="padding-top: 32px;padding-bottom: 32px;">
-                    <img src="./imagens/EBAC_Banking.png" alt="EBAC Banking">
+                    <img src="https://servidores-estaticos-sooty.vercel.app/EBAC_Banking.png" alt="EBAC Banking">
                 </th>
             </tr>
         </thead>
@@ -53,9 +53,9 @@
             <tr>
                 <td style="padding-top: 128px;">
                     <center>
-                        <a href="https://instagram.com"><img src="imagens/instagram.png" alt="Instagram"></a>
-                        <a href="https://facebook.com"><img src="imagens/facebook.png" alt="Facebook"></a>
-                        <a href="https://twitter.com"><img src="imagens/twitter.png" alt="Twitter">
+                        <a href="https://instagram.com"><img src="https://servidores-estaticos-sooty.vercel.app/instagram.png" alt="Instagram"></a>
+                        <a href="https://facebook.com"><img src="https://servidores-estaticos-sooty.vercel.app/facebook.png" alt="Facebook"></a>
+                        <a href="https://twitter.com"><img src="https://servidores-estaticos-sooty.vercel.app/twitter.png" alt="Twitter">
                         </a>
                     </center>
                 </td>
